# worlds-downloader

./: .gitignore  README.md  default.nix  run  shell.nix  stack.yaml  worlds-downloader.cabal
app/: Main.hs
src/: Lib.hs  Worlds.hs
