name:                worlds-downloader
version:             0.1.0.0
homepage:            http://github.com/nkpart/worlds-downloader#readme
license:             BSD3
license-file:        LICENSE
author:              Nick Partridge
maintainer:          nkpart@gmail.com
copyright:           2016 Nick Partridge
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , process
                     , wreq
                     , taggy-lens
                     , taggy
                     , text
                     , lens
                     , bytestring
                     , filepath
                     , directory
  default-language:    Haskell2010

executable worlds-downloader
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , worlds-downloader
  default-language:    Haskell2010

test-suite worlds-downloader-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , worlds-downloader
                     , tasty
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/nkpart/worlds-downloader
